Update 3.1 - Updated Project Bingo status and added back menu bar. Fixed Title.

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,8 @@ video#bgvid {
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: #00d0ff;
+  color: #FFF;
 }
 
 .nav-masthead .nav-link + .nav-link {
